--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
-    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
     "gatsby-plugin-google-analytics": "^3.1.0",
@@ -25,18 +24,19 @@
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.0",
     "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-source-sanity": "^7.0.0",
     "gatsby-theme-i18n": "^1.0.5",
     "gatsby-theme-i18n-react-i18next": "^1.0.4",
     "gatsby-transformer-sharp": "^3.1.0",
     "i18next": "^19.9.2",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.10",
-    "styled-components": "^5.2.1"
+    "theme-ui": "^0.3.5"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
