--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "theme-ui": "^0.3.5"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "babel-eslint": "10.1.0",
     "eslint": "7.8.1",
     "eslint-config-airbnb": "18.2.0",
