--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "date-fns": "^2.19.0",
     "@sanity/block-content-to-react": "^2.0.7",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
