--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "date-fns": "^2.19.0",
     "@sanity/block-content-to-react": "^2.0.7",
+    "date-fns": "^2.19.0",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
     "gatsby-plugin-google-gtag": "^3.2.0",
     "gatsby-plugin-image": "^1.1.0",
     "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.0",
     "gatsby-plugin-sitemap": "^3.1.0",
