--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
     "date-fns": "^2.19.0",
+    "framer-motion": "^4.1.3",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
     "gatsby-plugin-google-gtag": "^3.2.0",
