--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "theme-ui": "^0.3.5"
+    "theme-ui": "^0.3.5",
+    "typed.js": "^2.0.12"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
